--- a/gb/23/11/18/n14118982.md
+++ b/gb/23/11/18/n14118982.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>王友群：APEC峰会外的怒吼传递四大信息</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/11/id14118983-eda58dd6389d4a1a53912fb8beb0132a-1.png" />
 <h6>11月15日，抗议者在习近平车队必经之路齐声高喊：“共产党下台！”“习近平下台！”（网络截图）
 </h6>
 <hr>
-	<p>【大纪元2023年11月18日讯】11月15日，在旧金山出席APEC峰会的中共党魁习近平，在去费罗丽庄园会见美国总统拜登的路上，许多抗议者齐声高喊：“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A%E4%B8%8B%E5%8F%B0.md#1">共产党下台</a>！”“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3%E4%B8%8B%E5%8F%B0.md#1">习近平下台</a>！”</p>
+	<p>【大纪元2023年11月18日讯】11月15日，在旧金山出席APEC峰会的中共党魁习近平，在去费罗丽庄园会见美国总统拜登的路上，许多抗议者齐声高喊：“共产党下台！”“习近平下台！”</p>
 <p>11月14日，习抵达旧金山的当天，抗议人士租用一架小型飞机，拉着“终结共产党，自由中国、自由香港、自由西藏、自由维吾尔”的巨型横幅，飞过加州利弗莫尔市、海伍德市、奥克兰市，经过海湾大桥，到达旧金山市区，之后横穿旧金山市区，到达金门大桥、邓巴顿大桥，整个湾区的人都能看到。</p>
-<p>拜登与习会面当天，中国著名人权律师高智晟的夫人耿和，也到习必经之地抗议。她高举着高智晟律师的照片，上面写着：“耿和喊话习近平：高智晟在哪里？”，“（被）绑架失踪6周年，今何在？”</p>
-<p>习此次到访加州，是拜登就任美国第46届总统以来习第一次到访美国。与此前习访美最大的不同是，这次习遭遇了最多的抗议者。</p>
+<p>拜登与习会面当天，中国著名人权律师高智晟的夫人耿和，也到习必经之地抗议。她高举着高智晟律师的照片，上面写着：“耿和喊话习近平：高智晟在哪里？”“（被）绑架失踪6周年，今何在？”</p>
+<p>习此次到访加州，是拜登就任美国第46届总统以来习第一次到访美国。与此前习访美最大的不同是，这次习遭遇了迄今为止最多的抗议者。</p>
 <p>APEC峰会外的怒吼，至少传递了以下四大信息：</p>
 <h2><strong>第一，海内外民众的觉醒。</strong></h2>
 <p>百年中共的一个突出特点是：善于搞宣传，善于伪装，善于欺骗。用民国政治人物阎锡山的话说，中共是“最能迷惑人的九尾狐狸精”。</p>
 <p>百年中共建立了一套“颠倒黑白、混淆是非、光鲜动听”的党文化话语体系，不仅迷惑了亿万中国人民，也迷惑了许多外国民众。</p>
 <p>但是，再狡猾的狐狸，也逃不过“觉醒者”的火眼金睛。</p>
-<p>2004年、2017年、2018年，大纪元发表系列社论《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">九评共产党</a>》、《共产主义的终极目的》、《魔鬼在统治着我们的世界》，将共产党“假、恶、斗、反天、反地、反人类、反神佛、毁灭人类”的本质昭告天下，为全中国人民和全世界人民，透过中共制造的令人眼花缭乱的各种假象，破除对中共的幻想，认清中共的本质，提供了三把“金钥匙”。</p>
-<p>近些年来，中美贸易战，中共镇压香港反送中运动，“中共病毒”蔓延全世界，中共对台湾的极限施压，中共将对法轮功的迫害在三年“极端清零”中扩展到对全中国人民的迫害，中共在俄乌战争中实际站在俄一边，在以哈战争中实际站在哈一边，这一件接一件大事充分证明：上述《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">九评共产党</a>》等三本书揭示的共产党的真相是千真万确的。</p>
+<p>2004年、2017年、2018年，大纪元发表系列社论《九评共产党》《共产主义的终极目的》《魔鬼在统治着我们的世界》，将共产党“假、恶、斗、反天、反地、反人类、反神佛、毁灭人类”的本质昭告天下，为全中国人民和全世界人民，透过中共制造的令人眼花缭乱的各种假象，破除对中共的幻想，认清中共的本质，提供了三把“金钥匙”。</p>
+<p>近些年来，中美贸易战，中共镇压香港反送中运动，“中共病毒”蔓延全世界，中共对台湾的极限施压，中共将对法轮功的迫害在三年“极端清零”中扩展到对全中国人民的迫害，中共在俄乌战争中实际站在俄一边，在以哈战争中实际站在哈一边，这一件接一件大事充分证明：上述《九评共产党》等三本书揭示的共产党的真相是千真万确的。</p>
 <p>国内外越多越多的人，能够认清中共谎言背后包藏的祸心。</p>
 <p>比如，中共在美中峰会上提出的“三原则”——相互尊重、和平共处、双赢——看上去很美妙，其背后真正的含义却一点也不美妙。</p>
 <p>前美国国务院中国问题顾问余茂春一针见血地指出，中共所谓的“相互尊重”，实质上是要求美国“停止因为中共的镇压和不当行为而说中共的坏话”；“和平共处”实质上是要求美国“当中共想以自己的治理模式主宰世界时，不要抵制中共，而牺牲现有的全球自由贸易体系和国际法”；“双赢”实质上是“中共赢两次，美国输两次”。</p>
@@ -25,7 +25,7 @@
 <p>这是自上世纪80年代末90年代初苏联东欧各国共产党政权垮台以来最伟大的一场精神觉醒运动，正从根本上动摇中共的统治根基。</p>
 <h2><strong>第二，中共已到穷途末路。</strong></h2>
 <p>百年中共一路杀，一直杀到今天。中共已成为人类有史以来杀人最多、欠血债最大的党。</p>
-<p>自从2006年中共活摘法轮功学员器官的罪行在美国首次曝光以来，“追查迫害法轮功国际组织”，经过持续17年的独立调查，掌握了大量证据，包括被活摘者临终前的证言的视频与录音。这些证据在“追查国际”拍摄的32集电视片《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%93%81%E8%AF%81%E5%A6%82%E5%B1%B1.md#1">铁证如山</a>》中有集中展示。</p>
+<p>自从2006年中共活摘法轮功学员器官的罪行在美国首次曝光以来，“追查迫害法轮功国际组织”，经过持续17年的独立调查，掌握了大量证据，包括被活摘者临终前的证言的视频与录音。这些证据在“追查国际”拍摄的32集电视片《铁证如山》中有集中展示。</p>
 <p>“追查国际”调查得出的结论是：</p>
 <p>1999年7月20日中共独裁者江泽民发动对信仰“真、善、忍”的法轮功修炼群体的迫害以来，超越一切道德和法律底线，以大规模活摘法轮功学员器官的方式杀人，犯下了“这个星球上前所未有的”群体灭绝罪、酷刑罪、反人类罪。</p>
 <p>血债累累的中共，从头到脚，都浸泡在黑呼呼的“罪业”之中。以至于到了今天，在内政外交的各个领域，只要中共一出招，必定是昏招。</p>
@@ -37,20 +37,20 @@
 <p>文化上，已变成“罗刹海市”——“那马户不知道他是一头驴，那又鸟不知道他是一只鸡”；“可是那从来煤蛋儿生来就黑，不管你咋样洗呀那也是个脏东西”。</p>
 <h2><strong>第三，习近平已站在悬崖边。</strong></h2>
 <p>习当政11年，内斗不息，外斗不止，走到今天，放眼望去，满眼皆是敌。</p>
-<p>时至今日，习通过选择性反腐，查办了630多名副省部级以上高官，及其他中管干部。其中包括：中共政治局常委，中共政治局委员，中央军委副主席，最高法院一级大法官、二级大法官，部长副部长，省长副省长，省委书记副书记，省级政法委书记，省级公、检、法、司的一把手，少将、中将、上将，红二代，官二代，大型国企董事长、总裁，金融高管，等等等等。</p>
+<p>时至今日，习通过选择性反腐，查办了630多名副省部级以上高官，及其他中管干部。其中包括：中共政治局常委、中共政治局委员、中央军委副主席，最高法院一级大法官、二级大法官，部长副部长、省长副省长、省委书记副书记、省级政法委书记，省级公、检、法、司的一把手，少将、中将、上将，红二代、官二代，大型国企董事长、总裁、金融高管，等等等等。</p>
 <p>所有这些高官，及其家属子女，以及他们的后台，个个对习恨之入骨，必欲除之而后快。</p>
-<p>习“三连任”后达到集权的顶峰，既成了毛泽东时代、邓小平时代、江泽民时代所有问题的“背锅者”，也成了当今中共内政外交所有问题的第一责任人。习也因此成为海内外所有反习势力的众矢之的。</p>
-<p>习在第二任期的五年间，一个误判接一个误判，使中美关系恶化到建交40多年来的最低点。</p>
+<p>习“三连任”后达到集权的顶峰，既成了毛泽东时代、邓小平时代、江泽民时代所有问题的“背锅者”，也成了当今中共内政外交所有问题的第一责任人。习也因此成为众矢之的。</p>
+<p>习在第二任期的五年间，一个误判接一个误判，使中美关系恶化到建交四十多年来的最低点。</p>
 <p>此次APEC峰会上，习实指望能够通过缓和与美国的关系，对于“救经济”产生一些刺激作用。但是，中美之间的所有重大分歧依旧。</p>
 <p>在拜登与习近平会谈结束后，一名记者问美国总统拜登，是否坚持自己之前称习近平为独裁者的言论。拜登直言：“他是一个独裁者”。一点面子也不给。</p>
 <p>习的“战狼外交”，习在俄乌战争、以哈战争、朝鲜半岛问题上的立场，习在东海、台海、南海问题上的做法，习搞的“一带一路”等，都与普世价值背道而驰。所有这些，使习实际上与以美国为首的自由世界处于对立状态，亦使习在国际上空前孤立。</p>
 <p>习最大的危机是，习至今并没有真正掌控军权。</p>
 <p>中共二十大以来，习亲自提拔重用的一批高级将领接连不断出事。由火箭军大案触发的军队大清洗，已波及国防部、军委联合参谋部、战略支援部队、装备发展部、海军、空军、大型军工企业等。</p>
-<p>习二十大前查办的160多个将领，是习的死敌。</p>
+<p>习二十大前查办的一百六十多个将领，是习的死敌。</p>
 <p>在习反腐打虎十年后，在习反复强调军队必须“绝对忠诚”后，在习多次以张国焘等中共党史上的“反面人物”为例发出警告后，习亲自提拔重用的这些关键岗位上的高级将领，仍然对习不忠，仍在大肆贪腐，仍在阳奉阴违。</p>
 <p>这些二十大后被习查办的“习家军”，也成了习的死敌。</p>
 <p>上述情况表明：习依然面临兵变、政变、被暗杀的危险。</p>
-<p>在台上被习排挤、压制成最弱势总理的李克强，退休仅七个月后竟不明不白死去。许多人怀疑：李克强是被害死的。</p>
+<p>在台上被习排挤、压制，被认为是最弱势总理的李克强，退休仅七个月后竟不明不白死去。许多人怀疑：李克强是被害死的。</p>
 <p>李克强之死，一方面，导致中共官场，特别是高官，人人自危；另一方面，不想成为李克强第二、第三，第N的人，会奋起自卫与反抗。</p>
 <p>这使得习不得不时时警惕，处处小心，防不胜防，险中有险。</p>
 <h2><strong>第四，中国即将发生巨变。</strong></h2>
@@ -58,52 +58,53 @@
 <p>中共二十大以来，中国发生了一系列大事：去年10月22日，前中共党政军最高领导人胡锦涛，在国际媒体的镜头前，等于是在全世界观众面前，被强行架出二十大会场；去年11月30日，前中共党政军最高领导人江泽民暴死后，大瘟疫再次席卷全中国；今年10月27日，几乎出乎所有人意料之外，前中共政治局常委、国务院总理李克强，突然在上海离奇死亡。</p>
 <p>中共高层内斗之激烈、之凶险、之诡异、之黑暗，令世人瞠目结舌。</p>
 <p>李克强死后，可能还有中共政治局常委级别的高官相继死亡。</p>
-<p>去年11月，为抗议中共持续三年的“极端清零”，上海乌鲁木齐中路大批民众走上街头，齐声高喊：“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A%E4%B8%8B%E5%8F%B0.md#1">共产党下台</a>”、“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3%E4%B8%8B%E5%8F%B0.md#1">习近平下台</a>”。</p>
-<p>今年11月，为抗议中共暴政，在习近平出席APEC峰会的会场外，从美国各地、世界各地赶来的抗议者，也齐声高喊：“共产党下台”、“习近平下台”。</p>
+<p>去年11月，为抗议中共持续三年的“极端清零”，上海乌鲁木齐中路大批民众走上街头，齐声高喊：“共产党下台”“习近平下台”。</p>
+<p>今年11月，为抗议中共暴政，在习近平出席APEC峰会的会场外，从美国各地、世界各地赶来的抗议者，也齐声高喊：“共产党下台”“习近平下台”。</p>
 <p>太平洋两岸的海内外民众，居然喊出相同的口号，且高亢激越，响彻云霄。或许，这正是“天灭中共”的天象在人间的对应。</p>
-<p>11月11日，民运人士魏京生、王丹、王军涛在旧金山希尔顿嘉悦里酒店召开&#8221;国是会议&#8221;新闻发布会。据介绍，第一届“国是会议将于明年3月在美国首都华盛顿举行，旨在“探讨结束中共暴政，创建民主中国的方案”。</p>
+<p>11月11日，民运人士魏京生、王丹、王军涛在旧金山希尔顿嘉悦里酒店召开“国是会议”新闻发布会。据介绍，第一届“国是会议将于明年3月在美国首都华盛顿举行，旨在“探讨结束中共暴政，创建民主中国的方案”。</p>
 <p>海内外的许多中国人都在为中共垮台做准备。</p>
 <p>中共的统治已摇摇欲坠，习近平的权势已岌岌可危。</p>
 <p>中国的巨变，已是天时（天灭中共）、地利（天下围共）、人和（内外同心）兼备。</p>
 <p>如果再来一个刺痛人心的突发事件，可能引发一场政治巨变的惊涛骇浪。</p>
 <h2><strong>结语</strong></h2>
-<p>六年前的四月，习近平到佛罗里达海湖山庄会见时任美国总统川普时，中美关系还在继续向上爬坡。</p>
+<p>六年前的四月，习近平到佛罗里达海湖山庄会见时任美国总统川普（特朗普）时，中美关系还在继续向上爬坡。</p>
 <p>六年后的今天，习到旧金山费罗丽庄园会见现任美国总统拜登时，中美关系已跌入深渊，且再也不可能回到从前。</p>
 <p>斗转星移，沧海桑田。</p>
 <p>人类历史确实正在迎来百年未有之巨变。不过，这个巨变不是习幻想的“东升西降”，而很可能是中共的末日。</p>
 <p>习很可能是给百年中共历史划句号的那个人。</p>
 <p>大纪元首发</p>
-<p>责任编辑：高义</p>
+<p>责任编辑：高义#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14114707.md#1">王友群：由李克强之死想到前公安部长李震之死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115711.md#1">王友群：“金融虎”孙德顺贪近10亿根源何在？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14116441.md#1">王友群：从王岐山的两个秘书被查办说开去</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/16/n14118172.md#1">王友群：当年为保曾庆红的爹引出的惊天秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/12/n14114707.md#1">王友群：由李克强之死想到前公安部长李震之死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/13/n14115711.md#1">王友群：“金融虎”孙德顺贪近10亿根源何在？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/14/n14116441.md#1">王友群：从王岐山的两个秘书被查办说开去</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/16/n14118172.md#1">王友群：当年为保曾庆红的爹引出的惊天秘密</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/9/7/n10698182.md#1" target="_blank">共产暴政录：中共在苏区杀人如麻</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/4/9/n11172953.md#1" target="_blank">只做了这一件事 他们绝处逢生（二）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/22/n10656949.md#1" target="_blank">胡健：少年反革命</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/2/n10948448.md#1" target="_blank">新年感恩 中国百姓盼李洪志大师早日回国</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14115070.md#1">印尼巴东山发现至今最古老金字塔</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115416.md#1">霸王别姬后 虞姬再见项羽 另外时空解谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112219.md#1">跟我学唐诗（1）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/7/n14111628.md#1">四位相师的神异之事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/16/n14117973.md#1">【环球直击】拜登记者会：要查证中共说的话</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118539.md#1">【晚间新闻】美议员杯葛美中晚宴 要求公布名单</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118541.md#1">【全球新闻】分赃不均 小粉红惨遭中共敲诈恐吓</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117306.md#1">中国女演员孙菲菲曝影视圈黑幕和“潜规则”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117239.md#1">美中分歧巨大 拜登：管控竞争不演变为冲突</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/12/15/n13439811.md#1">【声乐】神韵歌唱家分享失传的传统美声唱法（1）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117273.md#1">中国独立导演郭珍明被限制出境 自曝护照被剪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14116330.md#1">阿诺上播客受访 宠物驴突然出现讨食大抢镜头</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117194.md#1">演唱会设激光天幕 黎明搞笑吁观众别做低头族</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14116769.md#1">演员好友以《六人行》影像悼念马修派瑞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14116716.md#1">SEVENTEEN联合国演说：团队在逐梦中学习成长</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14114677.md#1">乐高乐园：创意无限的奇妙之旅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14116484.md#1">“水果之神”葡萄抗老防癌 8技巧教你吃对葡萄</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/11/n14114493.md#1">新研究发现尿石素A强力抗衰老 5食物含量最多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14116882.md#1">当心旅游诈骗 旅游达人也曾犯菜鸟级错误</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">亚马逊每日精选 · 11/17日编辑推荐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/11/18/n14118982.htm">王友群：APEC峰会外的怒吼传递四大信息</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/11/18/n14118982.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/11/18/n14118982.htm">王友群：APEC峰会外的怒吼传递四大信息</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/11/18/n14118982.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
